added initial fttransformer.py

--- a/steel_plates.ipynb
+++ b/steel_plates.ipynb
@@ -5848,7 +5848,7 @@
    "source": [
     "# TO-DO\n",
     "# TODO: hyp tuning NN\n",
-    "# TODO: FTTransformer"
+    "# TODO: add fttransformer functions from fttransformer.py with cv"
    ],
    "outputs": [],
    "execution_count": 78
