--- a/steel_plates.ipynb
+++ b/steel_plates.ipynb
@@ -3050,6 +3050,11 @@
    "execution_count": 74
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "\"Modeling Tabular data using Conditional GAN\" paper: https://arxiv.org/abs/1907.00503"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-18T08:28:31.039248Z",
@@ -3058,7 +3063,7 @@
    },
    "cell_type": "code",
    "source": [
-    "df = pd.read_csv('csv/faults.csv')\n",
+    "#df = pd.read_csv('csv/faults.csv')\n",
     "# Make data more usable\n",
     "df_processed = ctgan_oversampling.preprocess_df(df)\n",
     "\n",
@@ -5136,7 +5141,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TabNet"
+    "## TabNet\n",
+    "\n",
+    "\"TabNet: Attentive Interpretable Tabular Learning\" paper: https://arxiv.org/abs/1908.07442"
    ]
   },
   {
@@ -5397,7 +5404,13 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## FTTransformer"
+   "source": [
+    "## FTTransformer\n",
+    "\n",
+    "\"Revisiting Deep Learning Models for Tabular Data\" paper: https://arxiv.org/abs/2106.11959\n",
+    "\n",
+    "![Alt Text](https://www.researchgate.net/publication/372985818/figure/fig1/AS:11431281180233791@1691514218219/The-FT-Transformer-architecture-the-proposed-architecture-contains-two-major-blocks.png)"
+   ]
   },
   {
    "metadata": {
